Android version. The application name has been changed.

--- a/VisualPassword.Android/app/src/main/res/values/strings.xml
+++ b/VisualPassword.Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Visual Password.Android</string>
+    <string name="app_name">Visual Password</string>
 </resources>
